force-app/main/default/objects/Opportunity__c/fields/Other_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Item_Description__c</fullName>
    <label>Other Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>