force-app/main/default/objects/Opportunity__c/fields/Packaging2__c.field-meta.xml
<CustomField>
    <fullName>Packaging2__c</fullName>
    <label>Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25KG</fullName>
            </value>
            <value>
                <fullName>50LBs</fullName>
            </value>
            <value>
                <fullName>TOTE</fullName>
            </value>
            <value>
                <fullName>20LB</fullName>
            </value>
            <value>
                <fullName>40LB</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>20KG</fullName>
            </value>
            <value>
                <fullName>500#</fullName>
            </value>
            <value>
                <fullName>640#</fullName>
            </value>
            <value>
                <fullName>24LB</fullName>
            </value>
            <value>
                <fullName>TRIM</fullName>
            </value>
            <value>
                <fullName>VRBL</fullName>
            </value>
            <value>
                <fullName>07LB</fullName>
            </value>
            <value>
                <fullName>4/5#</fullName>
            </value>
            <value>
                <fullName>8/6#</fullName>
            </value>
            <value>
                <fullName>BLCK</fullName>
            </value>
            <value>
                <fullName>DRUM</fullName>
            </value>
            <value>
                <fullName>150#</fullName>
            </value>
            <value>
                <fullName>15LB</fullName>
            </value>
            <value>
                <fullName>6/5#</fullName>
            </value>
            <value>
                <fullName>12LB</fullName>
            </value>
            <value>
                <fullName>15KG</fullName>
            </value>
            <value>
                <fullName>6/6#</fullName>
            </value>
            <value>
                <fullName>PAIL 18 KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>