force-app/main/default/objects/Opportunity__c/fields/Pallets_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Pallets_Fixed__c</fullName>
    <label>Pallets ($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>