force-app/main/default/objects/Opportunity__c/fields/Pallets_Labels_Docs_Cont__c.field-meta.xml
<CustomField>
    <fullName>Pallets_Labels_Docs_Cont__c</fullName>
    <label>Pallets / Labels / Docs ($/Cont)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>