force-app/main/default/objects/Opportunity__c/fields/Pallets_per_lb_MT__c.field-meta.xml
<CustomField>
    <fullName>Pallets_per_lb_MT__c</fullName>
    <label>Pallets ($ per lb/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>