force-app/main/default/objects/Opportunity__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <formula>IF(ISBLANK(Account__r.accmanalysis3__c ),&apos;&apos;,Account__r.accmanalysis3__c &amp; &apos; &apos; &amp; TEXT( Account__r.accmterms_days__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>