force-app/main/default/objects/Opportunity__c/fields/Planned_of_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Planned_of_Shipments__c</fullName>
    <label>Planned # of Shipments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>