force-app/main/default/objects/Opportunity__c/fields/Planned_of_Total_Containers__c.field-meta.xml
<CustomField>
    <fullName>Planned_of_Total_Containers__c</fullName>
    <label># of Containers per Shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>