force-app/main/default/objects/Opportunity__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMF / Butteroil</fullName>
            </value>
            <value>
                <fullName>Bluegrass and other products</fullName>
            </value>
            <value>
                <fullName>Buttermilk</fullName>
            </value>
            <value>
                <fullName>Butter Products</fullName>
            </value>
            <value>
                <fullName>Butter Products LSDP</fullName>
            </value>
            <value>
                <fullName>Caseins &amp; Caseinates</fullName>
            </value>
            <value>
                <fullName>Cheeses</fullName>
            </value>
            <value>
                <fullName>Cocoa</fullName>
            </value>
            <value>
                <fullName>Cream Products LSDP</fullName>
            </value>
            <value>
                <fullName>Fluids</fullName>
            </value>
            <value>
                <fullName>Fluids LSDP</fullName>
            </value>
            <value>
                <fullName>Lactose</fullName>
            </value>
            <value>
                <fullName>Milk Protein Concentrate</fullName>
            </value>
            <value>
                <fullName>Misc. Blends</fullName>
            </value>
            <value>
                <fullName>Misc. Blends LSDP</fullName>
            </value>
            <value>
                <fullName>Nonfat Dry Milk</fullName>
            </value>
            <value>
                <fullName>Nonfat Dry Milk LSDP</fullName>
            </value>
            <value>
                <fullName>Permeate</fullName>
            </value>
            <value>
                <fullName>Wheat Gluten</fullName>
            </value>
            <value>
                <fullName>Whey</fullName>
            </value>
            <value>
                <fullName>Whey Protein Concentrate34</fullName>
            </value>
            <value>
                <fullName>Whey Protein Concentrate50+</fullName>
            </value>
            <value>
                <fullName>Whole Milk</fullName>
            </value>
            <value>
                <fullName>WHOLE MILK LSDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>