force-app/main/default/objects/Opportunity__c/fields/Quantitys__c.field-meta.xml
<CustomField>
    <fullName>Quantitys__c</fullName>
    <formula>Item__r.Default_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>