force-app/main/default/objects/Opportunity__c/fields/Sales_Order_Num__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Num__c</fullName>
    <label>Sales Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>