force-app/main/default/objects/Opportunity__c/fields/Sell_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sell_Rate__c</fullName>
    <label>Sell Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>