force-app/main/default/objects/Opportunity__c/fields/Selling_Costs_lb__c.field-meta.xml
<CustomField>
    <fullName>Selling_Costs_lb__c</fullName>
    <label>Selling Costs ($/lb)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>