force-app/main/default/objects/Opportunity__c/fields/Selling_Costs_MT__c.field-meta.xml
<CustomField>
    <fullName>Selling_Costs_MT__c</fullName>
    <label>Selling Costs ($/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>