force-app/main/default/objects/Opportunity__c/fields/SFAccountCustNum__c.field-meta.xml
<CustomField>
    <fullName>SFAccountCustNum__c</fullName>
    <formula>Account__r.SFAccountCusNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFAccountCustNum</label>
    <type>Text</type>
</CustomField>