force-app/main/default/objects/Opportunity__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>