force-app/main/default/objects/Opportunity__c/fields/Shipment_Period__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Period__c</fullName>
    <label>Shipment Period</label>
    <type>Date</type>
</CustomField>