force-app/main/default/objects/Opportunity__c/fields/Shipment_Period_Range_End__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Period_Range_End__c</fullName>
    <label>Shipment Period Range End</label>
    <type>Date</type>
</CustomField>