force-app/main/default/objects/Opportunity__c/fields/Shipment_Period_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Period_Range_Start__c</fullName>
    <label>Shipment Period Range Start</label>
    <type>Date</type>
</CustomField>