force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>1. Open - This is a new opportunity the trader is working on with the customer.

2. Closed/Dead - This is an opportunity the customer has declined.

3. Sold -This is an opportunity the customer has approved for sale. When changed to sold, the opportunity should go to the commercial assistant (CA) dashboard. There may need to be warnings if it stays in the “Sold” stage for too long.

4. In Process - This is when the opportunity has been picked up by a CA and they are working on entering it into the ERP system.

5. Entered - This is when the opportunity has been entered into the ERP system.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
                <default>true</default>
                <label>WIP</label>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Entered</fullName>
            </value>
            <value>
                <fullName>Closed/Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>