force-app/main/default/objects/Opportunity__c/fields/Stage_Indicate__c.field-meta.xml
<CustomField>
    <fullName>Stage_Indicate__c</fullName>
    <formula>IF( ((NOW()- Date_Quoted__c) * 24) &lt; 72 ,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30) ,
IF(AND(((NOW()- Date_Quoted__c) * 24) &gt; 72 ,((NOW()- Date_Quoted__c) * 24) &lt; 120 ), IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IF((((NOW()- Date_Quoted__c) * 24) &gt; 120), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),&apos;NONE&apos;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Indicate</label>
    <type>Text</type>
</CustomField>