force-app/main/default/objects/Opportunity__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>