force-app/main/default/objects/Opportunity__c/fields/Total_Selling_Price_lb__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Price_lb__c</fullName>
    <label>Total Selling Price ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>