force-app/main/default/objects/Opportunity__c/fields/Total_Selling_Price_MT__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Price_MT__c</fullName>
    <label>Total Selling Price ($/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>