force-app/main/default/objects/Opportunity__c/fields/Trader__c.field-meta.xml
<CustomField>
    <fullName>Trader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (Trader)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>