force-app/main/default/objects/Opportunity__c/fields/Transport_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Transport_Subtotal__c</fullName>
    <label>Transport Subtotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>