force-app/main/default/objects/Opportunity__c/fields/Transportation_cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Transportation_cost_Total__c</fullName>
    <label>Transportation cost: Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>