force-app/main/default/objects/Opportunity__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <label>Validity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>