force-app/main/default/objects/Opportunity__c/fields/VIA__c.field-meta.xml
<CustomField>
    <fullName>VIA__c</fullName>
    <label>VIA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>