force-app/main/default/objects/Opportunity__c/validationRules/Competitor_Price_Required_on_Stage_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Price_Required_on_Stage_close</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( Stage__c , &apos;Closed/Dead&apos;), ISBLANK(Competitor_s_Price__c))</errorConditionFormula>
    <errorDisplayField>Competitor_s_Price__c</errorDisplayField>
    <errorMessage>Competitor Price is required in order to Stage is Closed/Dead</errorMessage>
</ValidationRule>