force-app/main/default/objects/Opportunity__c/validationRules/Other_Product_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Product_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Item_Description__c , &apos;Other&apos;) , ISBLANK( Other_Item_Description__c ) )</errorConditionFormula>
    <errorDisplayField>Other_Item_Description__c</errorDisplayField>
    <errorMessage>Please Fill Product value name in Other Product value field.</errorMessage>
</ValidationRule>