force-app/main/default/objects/Opportunity__c/validationRules/Product_Description_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Description_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(TEXT(Item_Description__c))),
NOT(ISBLANK(Item_Description_Other__c))
)</errorConditionFormula>
    <errorMessage>Please only populate the &apos;Product Description&apos; or the &apos;Product Description - Other&apos; field. Both fields cannot be populated.</errorMessage>
</ValidationRule>