force-app/main/default/objects/Opportunity__c/validationRules/Sales_Order_Num_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Order_Num_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;Entered&apos;), ISNULL( Sales_Order_Num__c ) )</errorConditionFormula>
    <errorDisplayField>Sales_Order_Num__c</errorDisplayField>
    <errorMessage>Sales Order # is required to update the Stage Entered</errorMessage>
</ValidationRule>