force-app/main/default/objects/Opportunity__c/validationRules/Shipment_Period_Range_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipment_Period_Range_End</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
AND(NOT(ISBLANK( Shipment_Period_Range_End__c )), ISNEW(), Shipment_Period_Range_End__c &lt; Shipment_Period_Range_Start__c )
,
AND(NOT(ISBLANK( Shipment_Period_Range_End__c )), NOT(ISNEW()), Shipment_Period_Range_End__c &lt; Shipment_Period_Range_Start__c , ISCHANGED(Shipment_Period_Range_End__c ) )
)</errorConditionFormula>
    <errorDisplayField>Shipment_Period_Range_End__c</errorDisplayField>
    <errorMessage>End Date should not be a date prior to the Start Date.</errorMessage>
</ValidationRule>