force-app/main/default/objects/Opportunity__c/validationRules/Shipment_Period_Range_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipment_Period_Range_Start</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
AND(NOT(ISBLANK( Shipment_Period_Range_Start__c )), ISNEW(), Shipment_Period_Range_Start__c &lt; TODAY() )
,
AND(NOT(ISBLANK( Shipment_Period_Range_Start__c )), NOT(ISNEW()), Shipment_Period_Range_Start__c &lt; TODAY() , ISCHANGED(Shipment_Period_Range_Start__c ) )
)</errorConditionFormula>
    <errorDisplayField>Shipment_Period_Range_Start__c</errorDisplayField>
    <errorMessage>Date entered cannot be a date prior to today.</errorMessage>
</ValidationRule>