force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Trader__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Delivered_Price_Calculated__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Stage_Indicate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>