force-app/main/default/objects/Opportunity__c/listViews/Edwin_s_list_view.listView-meta.xml
<ListView>
    <fullName>Edwin_s_list_view</fullName>
    <columns>Trader__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Delivered_Price_Calculated__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Stage_Indicate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Edwin&apos;s list view</label>
</ListView>