force-app/main/default/objects/Opportunity__c/listViews/Logistics_View_Export.listView-meta.xml
<ListView>
    <fullName>Logistics_View_Export</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Planned_of_Total_Containers__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Destination__c</columns>
    <columns>Drayage_Domestic_Inland_Fixed__c</columns>
    <columns>Ocean_Freight_Fixed__c</columns>
    <columns>Inco_Terms__c</columns>
    <columns>Origin__c</columns>
    <columns>Planned_of_Shipments__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sales_Order_Num__c</columns>
    <columns>Stage__c</columns>
    <columns>Origin_Plant_WH__c</columns>
    <columns>Origin_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Entered</value>
    </filters>
    <label>Logistics View - Export</label>
</ListView>