force-app/main/default/objects/Opportunity__c/listViews/Stage_2_Quoted.listView-meta.xml
<ListView>
    <fullName>Stage_2_Quoted</fullName>
    <columns>NAME</columns>
    <columns>Trader__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Account__c</columns>
    <columns>Destination__c</columns>
    <columns>Stage_Indicate__c</columns>
    <columns>Delivered_Price_Calculated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Quoted</value>
    </filters>
    <label>Stage 2 - Quoted</label>
</ListView>