force-app/main/default/objects/Opportunity__c/listViews/Stage_3_Sold.listView-meta.xml
<ListView>
    <fullName>Stage_3_Sold</fullName>
    <columns>NAME</columns>
    <columns>Trader__c</columns>
    <columns>Product_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Destination__c</columns>
    <columns>Account__c</columns>
    <columns>Stage_Indicate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </filters>
    <label>Stage 3 - Sold</label>
</ListView>