force-app/main/default/objects/Opportunity__c/listViews/Stage_5_Entered.listView-meta.xml
<ListView>
    <fullName>Stage_5_Entered</fullName>
    <columns>Trader__c</columns>
    <columns>Date_Quoted__c</columns>
    <columns>Date_SO_Written__c</columns>
    <columns>Sales_Order_Num__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Delivered_Price_Calculated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Entered</value>
    </filters>
    <label>Stage 5 - Entered</label>
</ListView>